Lista de Exercício 2 - Classes

--- a/Python_Lista_de_Exercício_02.ipynb
+++ b/Python_Lista_de_Exercício_02.ipynb
@@ -6,7 +6,7 @@
       "name": "Python_Lista_de_Exercício_02.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMSncdz8mp0ns6ZrCbnxkZJ"
+      "authorship_tag": "ABX9TyMFrtj3ObqPEStrelJkZuFl"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +14,21 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XX9dvJGWFwgu",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Python para Modelagem Baseada em Agentes**\n",
+        "**Lista de Exercício 2**\n",
+        "\n",
+        "**Professor:** Bernardo Furtado\n",
+        "\n",
+        "**Aluno:** Paulo Estevão Alvarenga Martins"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -36,7 +51,7 @@
         "import random\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +81,7 @@
         "    def Saldo(self, quantia):\n",
         "        self.saldo += quantia\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +102,7 @@
         "Conta_01.Saldo(2.22)\n",
         "print(Conta_01.saldo)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +152,7 @@
         "    def Capacidade(self, quantia):\n",
         "        self.capacidade += quantia   \n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +176,7 @@
         "Loja_01.Capacidade(-1)\n",
         "print(Loja_01.capacidade)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +219,7 @@
         "  def Satisfacao (self, quantia):\n",
         "      self.satisfacao += quantia\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +241,7 @@
         "print(Cliente_01.conta.saldo)\n",
         "print(Cliente_01.satisfacao)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +325,7 @@
         "                c.Satisfacao(l.satisfacao)\n",
         "                l.conta.Saldo(l.custo_produto)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +354,7 @@
         "print(lojas[2].conta.saldo)\n",
         "print(lojas[2].satisfacao)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,7 +426,7 @@
         "  final_lojas_satis.append(l.satisfacao)\n",
         "  final_lojas_produ.append(l.custo_produto)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -433,7 +448,7 @@
         "print(inicial_lojas_saldo)\n",
         "print(final_lojas_saldo)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +506,7 @@
         "\n",
         "df_loj.to_csv(\"csv_loj.csv\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
