Trabalho Final Python

--- a/Python_Trabalho_Final.ipynb
+++ b/Python_Trabalho_Final.ipynb
@@ -6,7 +6,7 @@
       "name": "Python_Lista_de_Exercício_04.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPEqOg3g01hgD9uZ8CtjXOs"
+      "authorship_tag": "ABX9TyM5c4xju76rtvz3bxpTDMog"
     },
     "kernelspec": {
       "name": "python3",
@@ -37,9 +37,9 @@
       },
       "source": [
         "#**Introdução:**\n",
-        "Uma empresa quando fecha um contrato com uma outra empresa espera que esse contrato seja cumprido pela outra parte, um funcionário ao vender suas horas de trabalho também gostaria de que suas horas sejam devidamente pagas pela empresa que o contratou e, inclusive, faz dívidas já provisionando o salário que irá chegar. O problema acontece quando ocorre uma crise que penalisa a receita de empresas que não conseguirão honrar suas dívidas e não conseguirão pagar seus funcionários provocando a inadimplência em cadeia.\n",
+        "Uma empresa percebe uma demanda por um produto específico e, para produzir essa quantidade, necessita de funcionários. Esses funcionários precisam dinheiro para sobreviver e resolvem vender suas horas de trabalho. Quando a empresa não consegue vender o tanto quanto queria ou quando vem uma crise que afeta sua demanda, sua receita tem uma queda e, caso a empresa não tem uma sobra de caixa, não conseguem honrar os salários de seus funcionários. Tudo isso leva a inadimplência tanto da empresa e quanto de seus funcionários.\n",
         "\n",
-        "Esse modelos baseado em agentes irá simular uma crise em um sistema de relacionamento composto por empresas e funcionários. "
+        "Esse modelos baseado em agentes irá criar um ambiente estável entre empresas e funcinários e simula uma crise de curto prazo e outra de longo prazo nesses sistema. "
       ]
     },
     {
